--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,37 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+    font-family: Arial, Helvetica, sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body{
+    padding: 40px;
+    background-color: #20232a;
+    color: #61dafb;
+}
+.form_form{
+    text-align: center;
+}
+.card-grid {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+.card{
+    align-content: center;
+    border: 1px solid #FFFFFF;
+    border-radius: 15px;
+    background-color: #FFFFFF;
+    box-shadow: 5px 5px 5px gray;
+    margin: 10px;
+    overflow: hidden;
+    max-width: 250px;
+    max-height: 250px;
+}
+.card > p {
+    text-align: center;
+    font-size: 16px;
+    padding: 5px;
+}
+.card > img {
+    max-height: 170px;
+    width: 100%;
 }
